--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -61,6 +61,7 @@
 				<section aria-labelledby="contribs">
 					<h3 id="contribs">Contributors</h3>
 					<ul>
+						<li><strong>Sarah Copsey Alsader</strong> (University of Kent)</li>
 						<li><strong>Katherine Judith Anderson</strong> (Western Washington University)</li>
 						<li><strong>Zarena Aslami</strong> (Michigan State University)</li>
 						<li><strong>Carolyn Betensky</strong> (University of Rhode Island)</li>
@@ -79,6 +80,7 @@
 						<li><strong>Melissa Free</strong> (Arizona State University)</li>
 						<li><strong>Elaine Freedgood</strong> (New York University)</li>
 						<li><strong>Menglu Gao</strong> (University of Denver)</li>
+						<li><strong>Lenora Hanson</strong> (New York University)</li>
 						<li><strong>Jennifer Hayward</strong> (College of Wooster)</li>
 						<li><strong>Amy Kahrmann Huseby</strong> (Florida International University)</li>
 						<li><strong>Priyanka Anne Jacob</strong> (Loyola University Chicago)</li>
@@ -95,6 +97,7 @@
 						<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
 						<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
 						<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
+						<li><strong>Mohammad Sakhnini</strong> (Khalif University of Science and Technology)</li>
 						<li><strong>Anne Schwan</strong> (Edinburgh Napier University)</li>
 						<li><strong>Dana Aicha Shaaban</strong> (Texas Christian University)</li>
 						<li><strong>Breanna Simpson</strong> (York University)</li>
