--- a/html/about.html
+++ b/html/about.html
@@ -45,10 +45,10 @@
 					<p>The pages in this section complement those elsewhere found on the site and will evolve as the project evolves. At present, the section introduces the project's founding developers, acknowledges the work of our contributors, provides insight into the critical thinking that informs the project, and gathers in one place the various primary and secondary materials cited throughout the site.</p>
 				</section>
 
-				<section aria-labelledby="call-for-editors">
+				<!-- <section aria-labelledby="call-for-editors">
 					<h3 id="call-for-editors">Call for Social Media Assistant Editor (2023)</h3>
 					<div><a href="/html/about/call_for_assistant_editors.html"><img loading="lazy" src="/img/about/tiles/uvc_0045-1136px.jpg" srcset="/img/about/tiles/uvc_0045-1136px.jpg 1136w, /img/about/tiles/uvc_0045-930px.jpg 930w, /img/about/tiles/uvc_0045-814px.jpg 814w, /img/about/tiles/uvc_0045-662px.jpg 662w, /img/about/tiles/uvc_0045-568px.jpg 568w, /img/about/tiles/uvc_0045-530px.jpg 530w, /img/about/tiles/uvc_0045-465px.jpg 465w, /img/about/tiles/uvc_0045-407px.jpg 407w, /img/about/tiles/uvc_0045-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/><p class="new">New</p></a></div>
-				</section>
+				</section> -->
 
 				<section aria-labelledby="statement-on-ai">
 					<h3 id="statement-on-ai">Statement on Using Generative AI</h3>
