--- a/sitemap.html
+++ b/sitemap.html
@@ -64,7 +64,14 @@
 
 						<li role="none"><a href="/html/lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a>
 							<ol>
-								<li><a href="/html/lesson_plans/call_for_lesson_plan_participants.html">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</a></li>
+								<li><a href="/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html">Palestine in the Eighteenth and Nineteenth Centuries</a>
+									<ol>
+										<li><a href="/html/lesson_plans/palestine_and_travel.html">Palestine in Victorian Travels and Travel Writings</a></li>
+										<li><a href="/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html">Teaching Romanticism and Victorianism in Palestine</a></li>
+										<li><a href="/html/lesson_plans/palestine_literature_and_anti-colonial_identity.html">Palestinian Literature and Anti-Colonial Identity</a></li>
+										<li><a href="/html/lesson_plans/palestine_arabian_penninsula.html">The Romanticization of the Bedouin Arab</a></li>
+									</ol>
+								</li>
 								<li><a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>
 									<ol>
 										<li><a href="/html/lesson_plans/east_asia_psychoactive_revolution.html">Psychoactive Revolution and Transnational Networks</a></li>
