--- a/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
+++ b/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
@@ -70,7 +70,7 @@
 				</section>
 
 				<section aria-labelledby="statement">
-					<h3 id="statement">Statement on Palestine</h3>
+					<h3 id="statement"><em>Undisciplining the Victorian Classroom</em> Editorial Team  Statement on Palestine</h3>
 
 					<p>The Editorial Team of <em>Undisciplining the Victorian Classroom</em> acknowledges that this lesson plan on Palestine in the eighteenth and nineteenth centuries is being published at a critical time.  In development for many months, we could not have anticipated that these materials would be released as bombs fall on Gaza and as the numbers of Palestinian deaths grow daily. </p>
 
