--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -45,7 +45,7 @@
 					<p>These lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian Studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
-				<!-- <section aria-labelledby="palestine-1">
+				<section aria-labelledby="palestine-1">
 					<h3 id="palestine-1">Palestine in the 18th and 19th Centuries</h3>
 					<div><a href="/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html"><img style="object-position: 50% 1000%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0077-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0077-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0077-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0077-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0077-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0077-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0077-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0077-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0077-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A sweeping vista of the city of Palestine with people kneeling in the foreground."/><span>Cluster Introduction</span><p class="new">New</p></a></div>
 				</section>
@@ -59,7 +59,7 @@
 						<li><a href="/html/lesson_plans/palestine_literature_and_anti-colonial_identity.html">Palestinian Literature and Anti-Colonial Identity</a></li>
 						<li><a href="/html/lesson_plans/palestine_arabian_penninsula.html">The Romanticization of the Bedouin Arab</a></li>
 					</ul>
-				</section> -->
+				</section>
 				
 				<section aria-labelledby="east-asia-1">
 					<h3 id="east-asia-1">Transimperial Networks and East Asia</h3>
