--- a/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
+++ b/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
@@ -69,6 +69,22 @@
 					</div>
 				</section>
 
+				<section aria-labelledby="statement">
+					<h3 id="statement"><em>Undisciplining the Victorian Classroom</em> Editorial Team  Statement on Palestine</h3>
+
+					<p>The Editorial Team of Undisciplining the Victorian Classroom acknowledges that this lesson plan on Palestine in the eighteenth and nineteenth centuries is being published at a critical time.  In development for many months, we could not have anticipated that these materials would be released as bombs fall on Gaza and as the numbers of Palestinian deaths grow at horrific rates.</p>
+					
+					<p>In publishing these materials, we stand in solidarity with Palestinians, as part of our larger dedication to opposing settler colonialism and genocide everywhere and to grappling with our complicity in those systems and structures.  We see no contradiction in taking this position along side our opposition to anti-semitism, white supremacy, racism, and all other forms of oppression and violence.</p>
+
+					<p>The materials in this lesson plan show the deep importance of understanding Palestine and the current bombardment within a longer historical view.  Indeed, Israel’s present attacks on Gaza is not only the most current manifestation of its settler colonial project, but it is also intertwined with the multiple imperialisms that have shaped the region, especially those enacted by Britain.</p>
+
+					<p>This unit centers the Palestinian histories and perspectives that are so often erased in discussions about the region and offers constructive ways to bring this crucial context into our classrooms.  Disrupting this erasure is especially important since Palestinians and descendants of Palestinian immigrants are often in the far minority at our institutions, which can further anonymize these communities.</p>
+
+					<p>This unit thus offers our field and the public at-large a concrete pedagogical opening for Palestinian students and teachers to articulate their experiences and histories to a wider world and for non-Palestinian students and teachers to engage with and learn about Palestine in the classroom from those who are directly experiencing the consequences of a crisis that crystallized, in part, during the eighteenth and nineteenth centuries.</p>
+
+					<p><em>Pearl Chaozon Bauer, Ava Bindas, Kristen Layne Figgins, Ryan D. Fong, Sophia Hsu, Cherrie Kwok, M.A. Miller, Adrian S. Wisnicki</em></p>
+				</section>
+
 				<aside class="breakout-quote" aria-labelledby="user-guide">
 					<h3 id="user-guide">Lesson Plan User Guide</h3>
 
