--- a/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
+++ b/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
@@ -47,7 +47,7 @@
 					<h3 id="details">Lesson Plan Cluster Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Lesson Plan Developers:</strong> Sarah Copsey Alsader, Lenora Hanson, and Mohammad Sakhini</p>
+						<p><strong>Lesson Plan Developers:</strong> Sarah Copsey Alsader, Lenora Hanson, and Mohammad Sakhnini</p>
 
 						<p><strong>Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:ryan.fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
@@ -132,7 +132,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>Sarah Copsey Alsader, Lenora Hanson, Mohammad Sakhini, devs. “Palestine in the Eighteenth and Nineteenth Centuries: Introduction.” Ryan D. Fong , les. plan clust. dev.;  Cherrie Kwok , les. plan guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html</a>.</p>
+					<p>Sarah Copsey Alsader, Lenora Hanson, Mohammad Sakhnini, devs. “Palestine in the Eighteenth and Nineteenth Centuries: Introduction.” Ryan D. Fong , les. plan clust. dev.;  Cherrie Kwok , les. plan guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html</a>.</p>
 				</section>
 			</main>
 			
