--- a/html/lesson_plans/palestine_and_travel.html
+++ b/html/lesson_plans/palestine_and_travel.html
@@ -92,7 +92,7 @@
 
 					<p>To argue that most nineteenth-century Britons who went to the Holy Land were not keen on providing vivid recollections and descriptions of Palestinian lives is perhaps true, but the idea that all travel accounts showed prejudices towards, and projected British power over, the natives characteristic of what Lorenzo Kamel calls “Biblical Orientalism” and “cultural imperialism,” or that “all” Europeans who visited Palestine were, in the words of Pappe, “colonizers, Christian missionaries and Zionist settlers” is an overstatement (1; 32).</p>
 
-					<p>Indeed, Gudrun Krämer has warned of the anachronism of seeing all European travelers in the region as racist settlers and colonizers: “[nineteenth-century European] travel literature” he wrote, “is by no means as uniform as some of the critics of Orientalism describe it” (87).</p>
+					<p>Indeed, Gudrun Krämer has warned of the anachronism of seeing all European travelers in the region as racist settlers and colonizers: “[nineteenth-century European] travel literature” she wrote, “is by no means as uniform as some of the critics of Orientalism describe it” (87).</p>
 
 					<p>A central learning objective of this lesson plan, then, is to invite students to consider how writing about, or visual representations of, Palestine equipped the British writer and artist with reflective opportunities, enabling her to confirm and also rethink the regime of science and progress, notions of patriarchy, and religious uniformity which dominated what John Stuart Mill called “The Spirit of the Age” in Victorian Britain (228).</p>
 				</section>	
