--- a/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html
+++ b/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html
@@ -161,7 +161,7 @@
 				</section>
 
 				<section aria-labelledby="questions">
-					<h3 id="materials">Discussion Questions, Key Passages, and Activities</h3>
+					<h3 id="questions">Discussion Questions, Key Passages, and Activities</h3>
 					<p>After students have familiarized themselves with the key terms in the critical frameworks outlined above, there are a few starting points that instructors could use for classroom discussions or activities.</p>
 
 					<section aria-labelledby="narrative">
