--- a/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html
+++ b/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html
@@ -69,21 +69,21 @@
 						<li><a href="#description">Cluster/Pair Description</a></li>
 						<li><a href="#summaries">Summaries and Critical Frameworks</a>
 						<ol>
-							<li><a href="materials-1">Summaries</a></li>
-							<li><a href="materials-2">Frameworks</a></li>
-							<li><a href="materials-3">Other Resources</a></li>
+							<li><a href="#materials-1">Summaries</a></li>
+							<li><a href="#materials-2">Frameworks</a></li>
+							<li><a href="#materials-3">Other Resources</a></li>
 						</ol></li>
 						<li><a href="#questions">Discussion Questions, Key Passages, and Activities</a>
 							<ol>
-								<li><a href="narrative">Narrative Techniques</a></li>
-								<li><a href="queerness">Queerness</a></li>
-								<li><a href="genre">Genre</a></li>
-								<li><a href="positionality">Positionality</a></li>
+								<li><a href="#narrative">Narrative Techniques</a></li>
+								<li><a href="#queerness">Queerness</a></li>
+								<li><a href="#genre">Genre</a></li>
+								<li><a href="#positionality">Positionality</a></li>
 							</ol></li>
 						<li><a href="#assignments">Assignments</a>
 							<ol>
-								<li><a href="essay">Reflective Essay</a></li>
-								<li><a href="mapping">Demonic Mapping</a></li>
+								<li><a href="#essay">Reflective Essay</a></li>
+								<li><a href="#mapping">Demonic Mapping</a></li>
 							</ol></li>
 						<li><a href="#Acknowledgements">Acknowledgements</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
