--- a/html/lesson_plans/contemporary_undisciplining_ecocolonialism_with_Silko.html
+++ b/html/lesson_plans/contemporary_undisciplining_ecocolonialism_with_Silko.html
@@ -70,16 +70,23 @@
 						<li><a href="#structure">About the Novel</a></li>
 						<li><a href="#materials">Critical Frameworks and Historical Contexts</a>
 							<ol>
-								<li><a href="materials-1">Indigenous Writing on Pueblo Cultures</a></li>
-								<li><a href="materials-2">Indigenous Writing on Comparatist Approaches to Global or Trans-Indigeneity</a></li>
-								<li><a href="materials-3">Indigenous Writing on “Environment”</a></li>
-								<li><a href="materials-3">Indigenous Writing on Colonialism and Resistance</a></li>
-								<li><a href="materials-3">Indigenous Writing from the Victorian Era</a></li>
-								<li><a href="materials-3">Indigenous Writing from the Victorian Era</a></li>
-								<li><a href="materials-3">Indigenous Writing from the Victorian Era</a></li>
-								<li><a href="materials-3">Indigenous Writing from the Victorian Era</a></li>
+								<li><a href="#materials-1">Indigenous Writing on Pueblo Cultures</a></li>
+								<li><a href="#materials-2">Indigenous Writing on Comparatist Approaches to Global or Trans-Indigeneity</a></li>
+								<li><a href="#materials-3">Indigenous Writing on “Environment”</a></li>
+								<li><a href="#materials-4">Indigenous Writing on Colonialism and Resistance</a></li>
+								<li><a href="#materials-5">Indigenous Writing from the Victorian Era</a></li>
+								<li><a href="#materials-6">Victorian Studies Scholarship Centering Indigeneity</a></li>
+								<li><a href="#materials-7">Scholarship on <em>Gardens in the Dunes</em></a></li>
 							</ol>
 						</li>
+						<li><a href="#strategies">Teaching Strategies and Activities </a>
+							<ol>
+								<li><a href="activities-1">Albert Millican, <em>Travels and Adventures of an Orchid Hunter </em></a></li>
+								<li><a href="activities-2">H. Rider Haggard, <em>King Solomon’s Mines</em></a></li>
+							</ol>
+						</li>
+						<li><a href="#assignments">Assignments and Assessment</a></li>
+						<li><a href="#acknowledgements">Acknowledgements</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
