--- a/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
+++ b/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
@@ -72,9 +72,9 @@
 				<section aria-labelledby="statement">
 					<h3 id="statement"><em>Undisciplining the Victorian Classroom</em> Editorial Team  Statement on Palestine</h3>
 
-					<p>The Editorial Team of Undisciplining the Victorian Classroom acknowledges that this set of lesson plans on Palestine in the eighteenth and nineteenth centuries is being published at a critical time.  In development for many months, we could not have anticipated that these materials would be released as bombs fall on Gaza and as the numbers of Palestinian deaths grow at horrific rates.</p>
+					<p>The Editorial Team of <p>Undisciplining the Victorian Classroom</p> acknowledges that this set of lesson plans on Palestine in the eighteenth and nineteenth centuries is being published at a critical time.  In development for many months, we could not have anticipated that these materials would be released as bombs fall on Gaza and as the numbers of Palestinian deaths grow at horrific rates.</p>
 					
-					<p>In publishing these materials, we stand in solidarity with Palestinians, as part of our larger dedication to opposing settler colonialism and genocide everywhere and to grappling with our complicity in those systems and structures.  We see no contradiction in taking this position along side our opposition to anti-semitism, white supremacy, racism, and all other forms of oppression and violence.</p>
+					<p>In publishing these materials, we stand in solidarity with Palestinians, as part of our larger dedication to opposing settler colonialism and genocide everywhere and to grappling with our complicity in those systems and structures.  We see no contradiction in taking this position alongside our opposition to anti-semitism, white supremacy, racism, and all other forms of oppression and violence.</p>
 
 					<p>The materials in this set of lesson plans show the deep importance of understanding Palestine and the current bombardment within a longer historical view.  Indeed, Israel’s present attacks on Gaza is not only the most current manifestation of its settler colonial project, but it is also intertwined with the multiple imperialisms that have shaped the region, especially those enacted by Britain.</p>
 
