--- a/404.html
+++ b/404.html
@@ -27,6 +27,7 @@
 				"/html/about/call_for_syllabi_and_syllabus_clusters.html": "/html/syllabi/call_for_syllabi_and_syllabus_clusters.html",
 				"/html/about/call_for_syllabus_clusters_2022": "/html/syllabi/call_for_syllabi_and_syllabus_clusters.html",
 				"/html/about/call_for_assistant_editors_2022.html": "/html/about/call_for_assistant_editors.html",
+				"palestine_in_the_eighteenth_and_nineteenth_centuries_intro": "palestine_eighteenth_nineteenth_introduction.html",
 			};
 			const currentPath = window.location.pathname;
 			if (redirects[currentPath]) {
