u other palestine file names

--- a/404.html
+++ b/404.html
@@ -28,6 +28,9 @@
 				"/html/about/call_for_syllabus_clusters_2022": "/html/syllabi/call_for_syllabi_and_syllabus_clusters.html",
 				"/html/about/call_for_assistant_editors_2022.html": "/html/about/call_for_assistant_editors.html",
 				"palestine_in_the_eighteenth_and_nineteenth_centuries_intro": "palestine_eighteenth_nineteenth_introduction.html",
+				"palestine_and_travel.html": "palestine_travel.html",
+				"palestine_literature_and_anti-colonial_identity.html": "palestine_literature_anti-colonial_identity.html",
+				"palestine_teaching_romanticism_and_victorianism.html": "palestine_teaching_romanticism_victorianism.html",
 			};
 			const currentPath = window.location.pathname;
 			if (redirects[currentPath]) {
