--- a/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
+++ b/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html
@@ -72,7 +72,7 @@
 				<section aria-labelledby="statement">
 					<h3 id="statement"><em>Undisciplining the Victorian Classroom</em> Editorial Team  Statement on Palestine</h3>
 
-					<p>The Editorial Team of <p>Undisciplining the Victorian Classroom</p> acknowledges that this set of lesson plans on Palestine in the eighteenth and nineteenth centuries is being published at a critical time.  In development for many months, we could not have anticipated that these materials would be released as bombs fall on Gaza and as the numbers of Palestinian deaths grow at horrific rates.</p>
+					<p>The Editorial Team of <em>Undisciplining the Victorian Classroom</em> acknowledges that this set of lesson plans on Palestine in the eighteenth and nineteenth centuries is being published at a critical time.  In development for many months, we could not have anticipated that these materials would be released as bombs fall on Gaza and as the numbers of Palestinian deaths grow at horrific rates.</p>
 					
 					<p>In publishing these materials, we stand in solidarity with Palestinians, as part of our larger dedication to opposing settler colonialism and genocide everywhere and to grappling with our complicity in those systems and structures.  We see no contradiction in taking this position alongside our opposition to anti-semitism, white supremacy, racism, and all other forms of oppression and violence.</p>
 
