--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -92,6 +92,7 @@
 						<li><strong>Waiyee Loh</strong> (Kanagawa University)</li>
 						<li><strong>Tricia Lootens</strong> (University of Georgia)</li>
 						<li><strong>Shantanu Majee</strong> (Techno India University)</li>
+						<li><strong>Diana Rose Newby</strong> (Princeton University)</li>
 						<li><strong>Indu Ohri</strong> (University of Virginia)</li>
 						<li><strong>Hyungji Park</strong> (Yonsei University)</li>
 						<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
