--- a/html/lesson_plans/contemporary_bronte_and_phillips.html
+++ b/html/lesson_plans/contemporary_bronte_and_phillips.html
@@ -47,19 +47,17 @@
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Barbara Barrow <a class="mail" href="mailto:barbara.barrow@englund.lu.se?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
+						<p><strong>Developer:</strong> Barbara Barrow <a class="mail" href="mailto:barbara.barrow@englund.lu.se?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
-						<p><strong>Peer Reviewer:</strong> Renee Fox, Matt Poland, Emma Soberano, Oishani Sengupta</p><!-- Change -->
+						<p><strong>Peer Reviewer:</strong> Renee Fox, Matt Poland, Emma Soberano, Oishani Sengupta</p>
 						
-						<p><strong>Lesson Plan Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:Ryan.Fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
+						<p><strong>Lesson Plan Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:Ryan.Fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
-						<p><strong>Lesson Plan Guide:</strong>  <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
-
-						<p><strong>Copyeditor:</strong> Ryan D. Fong</p><!-- Change -->
+						<p><strong>Copyeditor:</strong> Ryan D. Fong</p>
 						
-						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p><!-- Change -->
+						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
-						<p><strong>Cluster Title:</strong> Undisciplining in and through Contemporary Texts</p><!-- Change -->
+						<p><strong>Cluster Title:</strong> Undisciplining in and through Contemporary Texts</p>
 
 						<p><strong>Publication Date:</strong> 2023</p>
 					</div>
@@ -68,15 +66,25 @@
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
-						<li><a href="#overview">Overview</a></li>
-						<li><a href="#structure">Structure and Organisation</a></li>
-						<li><a href="#materials">Suggested Materials</a>
+						<li><a href="#description">Cluster/Pair Description</a></li>
+						<li><a href="#frameworks">Critical Frameworks</a></li>
+						<li><a href="#wuthering_heights"><em>Wuthering Heights</em></a>
 							<ol>
-								<li><a href="materials-1">[Change to first title]</a></li>
-								<li><a href="materials-2">[Change to second title]</a></li>
-								<li><a href="materials-3">[Change to third title]</a></li>
+								<li><a href="activity">Activity: Analysis of Digital Artifacts from the <em>Understanding Slavery Initiative</em></a></li>
+								<li><a href="discussion">Discussion Questions</a></li>
 							</ol>
 						</li>
+						<l><a href="#final">Final Assessment: Prompt for Adaptation Assignment</a></l>
+						<li><a href="#approaches">Additional Approachess</a></li>
+						<li><a href="#annotated_bibliography">Annotated Bibliography</a>
+							<ol>
+								<li><a href="bronte">Emily Brontë and <em>Wuthering Heights</em></a></li>
+								<li><a href="Liverpool">Liverpool</a></li>
+								<li><a href="phillips">Caryl Phillips and <em>The Lost Child</em></a></li>
+								<li><a href="Liverpool">Black British History</a></li>
+							</ol>
+						</li>
+						<li><a href="#works_cited">Works Cited</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
