--- a/html/lesson_plans/contemporary_bronte_and_phillips.html
+++ b/html/lesson_plans/contemporary_bronte_and_phillips.html
@@ -213,7 +213,24 @@
 							<h5 id="bindas">Bindas, Ava. &ldquo;<a href="https://undiscipliningvc.org/html/syllabi/victorian_human.html">The Victorian and the Human</a>.&rdquo; Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev.&nbsp;<em>Undisciplining the Victorian Classroom</em>, 2021.s</h5>
 
 							<p>This syllabus examines legacies of white supremacy in Victorian texts through the framework of Black studies, Black feminism, and postcolonial theory. Weeks 7, 8, and 9 of the syllabus (pp. 6-7) address the body, kin, and the environment in <em>Wuthering Heights. </em>These weeks provide useful discussion questions on these topics for students, as well as links or references to framing critical readings by Christina Sharpe and Kathryn Yusoff.</p>
+						</section>
 
+						<section aria-labelledby="meyer">
+							<h5 id="meyer"><p>Meyer, Susan. <em>Imperialism at Home: Race and Victorian Women&rsquo;s Fiction</em>. Cornell University Press, 1996, pp. 96-125.</p></h5>
+
+							<p>Meyer reads Heathcliff&rsquo;s insurgency as a striking instance of reverse imperialism that brings colonial violence and the colonial gaze to the English domestic interior, reading <em>Wuthering Heights</em> in the context of the Opium Wars, Liverpool&rsquo;s slave trade, the American Revolution, Canadian discontent, and uprisings in the West Indies. Meyer also interprets the novel&rsquo;s resistance to closure as a satire of how fiction can work to quash socially resistant energies, which is helpful in discussing the ending of <em>Wuthering Heights</em> with students. Meyer&rsquo;s interpretation can be usefully contrasted with Watson&rsquo;s and excerpted and given to students.</p>
+						</section>
+
+						<section aria-labelledby="Sneidern">
+							<h5 id="Sneidern"><p>Sneidern, Maja-Lisa von. "<a href="https://www.jstor.org/stable/30030265?seq=1#metadata_info_tab_contents">Wuthering Heights and the Liverpool Slave Trade</a>."&nbsp;<em>ELH, </em>vol. 62, no. 1, 1995, pp. 171-96.</p></h5>
+
+							<p>von Sneidern sets <em>Wuthering Heights </em>in the context of slavery, abolition, and myths of racial superiority in the eighteenth and nineteenth centuries, arguing for the novel as a &ldquo;site in which the problematics of an Anglo-Saxon mythology saddled with the fact of slavery and the "fact" of race are revealed, if not resolved&rdquo; (174). This article offers valuable historical context for discussing the novel, such as James Somersett&rsquo;s 1771 case against his enslaver, Somerset vs. Stewart, in which the judge ruled on whether an enslaved person who came to England could be forcibly removed and sent away for resale, a case that was just decided at the time of Mr. Earnshaw&rsquo;s journey to Liverpool (172).</p>
+						</section>
+
+						<section aria-labelledby="watson">
+							<h5 id="watson"><p>Watson, Reginald. "<a href="https://www.jstor.org/stable/44325077">Images of Blackness in the Works of Charlotte and Emily Bront</a><a href="https://www.jstor.org/stable/44325077">&euml;</a>,"&nbsp;<em>CLA Journal</em>, vol. 44, no. 4, 2001, pp. 451-70.</p></h5>
+
+							<p>Watson argues that the depiction of Heathcliff in <em>Wuthering Heights </em>reveals Brontë's&nbsp;racist attitudes towards people perceived as &ldquo;Black&rdquo; or &ldquo;other,&rdquo; reading his character through the lens of Sterling Brown&rsquo;s analysis of the tragic mulatto stereotype. Watson compares the depiction of this stereotype in <em>Wuthering Heights </em>to the portrayal of Bertha Mason in <em>Jane Eyre</em>, and makes a strong case for Heathcliff&rsquo;s character as a troubling &ldquo;reinforcement of the idea that in one of mixed heritage, the &lsquo;white&rsquo; side gains, but the &lsquo;black&rsquo; side destroys what is gained&rdquo; (459-460). Watson concludes that the Brontë sisters&rsquo; established place in the literary canon should not lead readers to overlook these negative depictions. Watson&rsquo;s interpretation can be fruitfully contrasted with Meyer&rsquo;s, and excerpted and given to students.</p>
 						</section>
 
 						<section aria-labelledby="secondary-1">
