--- a/html/lesson_plans/contemporary_undisciplining_dracula.html
+++ b/html/lesson_plans/contemporary_undisciplining_dracula.html
@@ -76,14 +76,42 @@
 						<li><a href="#frameworks">Overview and Critical Frameworks</a></li>
 						<li><a href="#adaptation">Key Texts: Adaptation Theory</a></li>
 						<li><a href="#dracula-and-race">Key Texts: <em>Dracula</em> and Race</a></li>
-						<li><a href="#afrofuturism">Key Texts: <em>Dracula</em> and Race</a></li>
-						<li><a href="#adaptation">Key Texts: Afrofuturism</a></li>
+						<li><a href="#afrofuturism">Key Texts: Afrofuturism</a></li>
 						<li><a href="#discussions">Discussions</a>
 							<ol>
-								<li><a href="#adaptation-discussion-1"><em>Dracula</em> and Adaptation</a></li>
-								<li><a href="#race-discussion-1"><em>Dracula</em> and Race</a></li>
-								<li><a href="#adaptation-discussion-2"><em>Fledgling</em> and Adaptation</a></li>
-								<li><a href="#afrofutruism-discussion"><em>Fledging</em> and Afrofuturism</a></li>
+								<li><a href="#adaptation-discussion-1"><em>Dracula</em> and Adaptation</a>
+									<ul>
+										<li><a href="#stamps">Postage Stamps</a></li>
+										<li><a href="#theorizing-adaptation">Theorizing/Dialogizing Adaptation</li>
+										<li><a href="#mechanical-reproduction">Mechanical Reproduction</a></li>
+										<li><a href="#vampiric-reproduction">Vampiric Reproduction</a></li>
+										<li><a href="#typewriting">A Mass of Typewriting</a></li>
+									</ul>
+								</li>
+							</li>
+								<li><a href="#race-discussion-1"><em>Dracula</em> and Race</a>
+									<ul>
+										<li><a href="#allegorically">Reading Alleogrically</a></li>
+										<li><a href="#anti-semitically">Reading Anti-Semitically</li>
+										<li><a href="#vampirically">Reading Vampirically</a></li>
+									</ul>
+								</li>
+								<li><a href="#adaptation-discussion-2"><em>Fledgling</em> and Adaptation</a>
+									<ul>
+										<li><a href="#evolutionary">Evolutionary Adaptation</a></li>
+										<li><a href="#necessity-black-vampires">The Necessity of Black Vampires</li>
+									</ul>
+								</li>
+								<li><a href="#afrofutruism-discussion"><em>Fledging</em> and Afrofuturism</a>
+									<ul>
+										<li><a href="#de-allegorizing">De-Allegorizing Otherness</a></li>
+										<li><a href="#balack-vampires">Black Vampires</li>
+										<li><a href="#alternative-futures">Alternative Futures</a></li>
+										<li><a href="#speciesism">Speciesism/Racism</a></li>
+										<li><a href="#black-humanity">Black Humanity</a></li>
+										<li><a href="#monstrous-racism">Monstrous Racism</a></li>
+									</ul>
+								</li>
 							</ol>
 						</li>
 						<li><a href="#assignments">Assignments and Assessment</a></li>
