u Fox lp link fixes

--- a/html/lesson_plans/contemporary_undisciplining_dracula.html
+++ b/html/lesson_plans/contemporary_undisciplining_dracula.html
@@ -184,7 +184,7 @@
 				</section>
 
 				<section aria-labelledby="discussions">
-					<h3 id="discussion">Discussions</h3>
+					<h3 id="discussions">Discussions</h3>
 
 					<section aria-labelledby="adaptation-discussion-1">
 						<h4 id="adaptation-discussion-1"><em>Dracula</em> and Adaptation</h4>
@@ -338,6 +338,7 @@
 				</section>
 
 				<section aria-labelledby="bibliography">
+					<h3 id="bibliography">Bibliography and Further Reading/Watching</h3>
 					<p>Arata, Stephen D. “The Occidental Tourist: <em>Dracula</em> and the Anxiety of Reverse Colonization.” <em>Victorian Studies</em>, Vol. 33, No. 4, Summer 1990, pp. 621-645.</p>
 
 					<p>Benjamin, Walter. “The Work of Art in the Age of Mechanical Reproduction.” <em>Illuminations</em>. Edited/Introduction by Hannah Arendt, Translated by Harry Zohn. Shocken Books, 1968, pp. 217-252.</p>
