--- a/html/lesson_plans/contemporary_bronte_and_phillips.html
+++ b/html/lesson_plans/contemporary_bronte_and_phillips.html
@@ -209,7 +209,7 @@
 						<h4 id="bronte">Emily Brontë and <em>Wuthering Heights</em></h4>
 						
 						<section aria-labelledby="bindas">
-							<h5 id="bindas">Bindas, Ava. “<a aria-label="External Link" href="https://undiscipliningvc.org/html/syllabi/victorian_human.html">The Victorian and the Human</a>.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021.s</h5>
+							<h5 id="bindas">Bindas, Ava. “<a aria-label="External Link" href="https://undiscipliningvc.org/html/syllabi/victorian_human.html">The Victorian and the Human</a>.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021.</h5>
 
 							<p>This syllabus examines legacies of white supremacy in Victorian texts through the framework of Black studies, Black feminism, and postcolonial theory. Weeks 7, 8, and 9 of the syllabus (pp. 6-7) address the body, kin, and the environment in <em>Wuthering Heights. </em>These weeks provide useful discussion questions on these topics for students, as well as links or references to framing critical readings by Christina Sharpe and Kathryn Yusoff.</p>
 						</section>
