--- a/html/lesson_plans/contemporary_africanfuturism.html
+++ b/html/lesson_plans/contemporary_africanfuturism.html
@@ -370,7 +370,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Jessie Reeder, dev. “Africanfuturism and British Catastrophe Literature.” Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Oishani Sengupta, Emma Soberano, collab peer revs.; Ryan D. Fong, les. plan clust. dev.;  , les. plan guide;  Ryan D. Fong, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_africanfuturism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_africanfuturism.html</a>.</p><!-- Change -->
+					<p>Jessie Reeder, dev. “Africanfuturism and British Catastrophe Literature.” Barbara Barrow, Renée Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Oishani Sengupta, Emma Soberano, collab peer revs.; Ryan D. Fong, les. plan clust. dev.; Ryan D. Fong, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_africanfuturism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_africanfuturism.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
