u other two contemp lps

--- a/html/lesson_plans/contemporary_undisciplining_ecocolonialism.html
+++ b/html/lesson_plans/contemporary_undisciplining_ecocolonialism.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Peer Reviewers:</strong> Cherrie Kwok, Jessie Reeder, Oishani Sengupta, and Emma Soberano</p>
 						
-						<p><strong>Lesson Plan Cluster Developer / Copyeditor:</strong> Ryan D. Fong <a class="mail" href="mailto:Ryan.Fong@kzoo1.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Lesson Plan Cluster Developer/Copyeditor:</strong> Ryan D. Fong <a class="mail" href="mailto:Ryan.Fong@kzoo1.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
@@ -351,7 +351,7 @@
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 
-					<p>Diana Rose Newby, dev. “Undisciplining Ecocolonialism with Leslie Marmon Silko.” Cherrie Kwok, Jessie Reeder, Oishani Sengupta, and Emma Soberano, collab peer revs.; Ryan D. Fong, les. plan clust. dev.;  , les. plan guide;  Ryan D. Fong, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_undisciplining_ecocolonialism_with_Silko.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_undisciplining_ecocolonialism_with_Silko.html</a>.</p><!-- Change -->
+					<p>Diana Rose Newby, dev. “Undisciplining Ecocolonialism with Leslie Marmon Silko.” Cherrie Kwok, Jessie Reeder, Oishani Sengupta, and Emma Soberano, collab peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_undisciplining_ecocolonialism_with_Silko.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_undisciplining_ecocolonialism_with_Silko.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
