corr cluster title

--- a/html/lesson_plans/contemporary_re-reading_archives.html
+++ b/html/lesson_plans/contemporary_re-reading_archives.html
@@ -55,7 +55,7 @@
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
-						<p><strong>Cluster Title:</strong> Undisciplining in and through Contemporary Texts</p>
+						<p><strong>Cluster Title:</strong> Undisciplining In and Through Contemporary Texts</p>
 
 						<p><strong>Publication Date:</strong> 2023</p>
 					</div>
