--- a/html/lesson_plans/east_asia_visualizing_korea.html
+++ b/html/lesson_plans/east_asia_visualizing_korea.html
@@ -195,7 +195,7 @@
 						<section aria-labelledby="primary-2">
 							<h5 id="primary-2">Primary Sources</h5>
 
-							<p>Broughton, William Robert. <a aria-label="External Link" href="https://nrs.lib.harvard.edu/urn-3:fhcl.hough:2641682"><em>A Voyage of Discovery to the North Pacific Ocean: In Which the Coast of Asia, from the Lat. of 35<sup>0</sup> North to the Lat. of 52<sup>0</sup> North, the Island of the Insu (Commonly Known under the Name of the Land of Jesso,) the North, South, and East Coasts of Japan, the Lieuchieux and the Adjacent Isles, as Well as the Coast of Corea, Have Been Examined and Surveyed</em></a>. Printed for T. Cadell and W. Davies, 1804. <em>In particular, see book 2, chapters 7 and 8.</em></p>
+							<p>Broughton, William Robert. <a aria-label="External Link" href="https://nrs.lib.harvard.edu/urn-3:fhcl.hough:2641682"><em>A Voyage of Discovery to the North Pacific Ocean: In Which the Coast of Asia, from the Lat. of 35º North to the Lat. of 52º North, the Island of the Insu (Commonly Known under the Name of the Land of Jesso,) the North, South, and East Coasts of Japan, the Lieuchieux and the Adjacent Isles, as Well as the Coast of Corea, Have Been Examined and Surveyed</em></a>. Printed for T. Cadell and W. Davies, 1804. <em>In particular, see book 2, chapters 7 and 8.</em></p>
 
 							<p>Hall, Basil. <a aria-label="External Link" href="https://archive.org/details/accountofvoyageo00hall"><em>Account of a Voyage of Discovery to the West Coast of Corea, and the Great Loo-Choo Island: With an Appendix, Containing Charts, and Various Hydrographical and Scientific Notices</em></a>. John Murray, 1818. <em>In particular, see chapter 1.</em></p>
 
