--- a/html/lesson_plans/contemporary_bronte_phillips.html
+++ b/html/lesson_plans/contemporary_bronte_phillips.html
@@ -158,7 +158,7 @@
 				<section aria-labelledby="lost-child">
 					<h3 id="lost-child">The Lost Child</h3>
 
-					<blockquote>“This seven-year old dark stranger, whom Mr Earnshaw ‘rescued’ from the streets of Liverpool in 1771, was one of the first literary characters to seize my imagination... From the vantage point of my bench [in Liverpool], I look around and am suddenly convinced that it must have been down here, by the docks, that Mr Earnshaw spotted the scrawny dark apparition named Heathcliff. And, not for the first time in my life, I close my eyes and try to solve the puzzle of this seven-year-old boy’s origins.” (Phillips, <em>The Atlantic Sound</em>, 115)</blockquote>
+					<blockquote>This seven-year old dark stranger, whom Mr Earnshaw ‘rescued’ from the streets of Liverpool in 1771, was one of the first literary characters to seize my imagination... From the vantage point of my bench [in Liverpool], I look around and am suddenly convinced that it must have been down here, by the docks, that Mr Earnshaw spotted the scrawny dark apparition named Heathcliff. And, not for the first time in my life, I close my eyes and try to solve the puzzle of this seven-year-old boy’s origins.” (Phillips, <em>The Atlantic Sound</em>, 115)</blockquote>
 
 					<section aria-labelledby="discussion-2">
 						<h4 id="discussion-2">Discussion Questions</h4>
