u sitemap cont LPs

--- a/sitemap.html
+++ b/sitemap.html
@@ -64,6 +64,15 @@
 
 						<li role="none"><a href="/html/lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a>
 							<ol>
+								<li>Undisciplining in and through Contemporary Texts
+									<ol>
+										<li><a href="html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Leslie Marmon Silko</a></li>
+										<li><a href="html/lesson_plans/contemporary_undisciplining_dracula.html">Undisciplining <em>Dracula</em>: <em>Fledgling</em> and Afrofuturism</a></li>
+										<li><a href="html/lesson_plans/contemporary_re-reading_archives.html">Re-Reading Nineteenth-Century Archives</a></li>
+										<li><a href="html/lesson_plans/contemporary_bronte_phillips.html">Emily Brontë’s <em>Wuthering Heights</em> and Caryl Phillips’s <em>The Lost Child</em></a></li>
+										<li><a href="html/lesson_plans/contemporary_africanfuturism.html">Africanfuturism and British Catastrophe Literature</a></li>
+									</ol>
+								</li>
 								<li><a href="/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html">Palestine in the Eighteenth and Nineteenth Centuries</a>
 									<ol>
 										<li><a href="/html/lesson_plans/palestine_travel.html">Palestine in Victorian Travels and Travel Writings</a></li>
