--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -64,6 +64,7 @@
 						<li><strong>Sarah Copsey Alsader</strong> (University of Kent)</li>
 						<li><strong>Katherine Judith Anderson</strong> (Western Washington University)</li>
 						<li><strong>Zarena Aslami</strong> (Michigan State University)</li>
+						<li><strong>Barbara Barrow</strong> (Lund University)</li>
 						<li><strong>Carolyn Betensky</strong> (University of Rhode Island)</li>
 						<li><strong>Ava Bindas</strong> (University of California Davis)</li>
 						<li><strong>Kira Braham</strong> (Louisiana School for Math, Science, and the Arts)</li>
@@ -77,6 +78,7 @@
 						<li><strong> Riya Das</strong> (Prairie View A&M University)</li>
 						<li><strong>Meg Dobbins</strong> (Eastern Michigan Universit)</li>
 						<li><strong>Anne Feuerstein</strong> (University of Hawai'i-Mānoa)</li>
+						<li><strong>Renée Fox</strong> University of California Santa Cruz)</li>
 						<li><strong>Melissa Free</strong> (Arizona State University)</li>
 						<li><strong>Elaine Freedgood</strong> (New York University)</li>
 						<li><strong>Menglu Gao</strong> (University of Denver)</li>
